--- a/RWD assignment/RWD basic 88/styles.css
+++ b/RWD assignment/RWD basic 88/styles.css
@@ -282,6 +282,7 @@
         float:none;
         width:100%;   
         text-align:center; 
+        margin-bottom:30px;
     }
     .section2 article figure img{
         width:75%;
@@ -384,20 +385,21 @@
     .section2 article{
         float:none;
         width:100%;
+        column-count:2;
     }
     .section2 figure {
-        float:left;
-    }
-    .section2 figure img{
-        width:90%;
+        width:100%;
     }
     .section2 figcaption{
-        float:left;
-        /* width:100%; */
+        padding-top:50px;
+        width:100%;
     }
     .section3 figure img{
         width:100%;
-
+        height:auto;
+    }
+    .section3 figcaption{
+        width:100%;
     }
     .details{
         column-count: 2;
@@ -405,6 +407,7 @@
     .details section{
         width:100%;
         margin-bottom:30px;
+        text-align:center;
     }
     
     footer {
