--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 85/styles.css
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 85/styles.css
@@ -1,207 +1,345 @@
 /* ===============
         Global
     =============== */
-    *{
-        margin:0;
-        padding:0;
-        /* border:1px solid red; */
-    }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* border:1px solid red; */
+}
 /*--------------------------- Elements --------------------------- */
-body{
-    color:#C0BAB6;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size:13px;
+body {
+  color: #c0bab6;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 13px;
 }
-h1{
-    font-size:36px;
-    font-weight:normal;
+h1 {
+  font-size: 36px;
+  font-weight: normal;
 }
-h2{
-    font-weight:normal;
-    font-size:13px;
+h2 {
+  font-weight: normal;
+  font-size: 13px;
 }
-a{
-    text-decoration:none;
-    outline:none;
+a {
+  text-decoration: none;
+  outline: none;
 }
-ul li{
-    list-style-type: none;
+ul li {
+  list-style-type: none;
 }
 
-.wrapper{
-    width:100%;
+.wrapper {
+  width: 100%;
 }
 /*--------------------------- Header--------------------------- */
-.row1{
-    background-color: #333333;
-    overflow:auto;
+.row1 {
+  background-color: #333333;
+  overflow: auto;
 }
-.row1 header{
-    width:960px;
-    margin:0 auto;
-    padding:20px 0;
-    overflow:hidden;
+header {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 /*--------------- Title----------------- */
-.row1 header #title{
-    float:left;
-    margin:0 0 20px 0;   
-}
-.row1 header #title a{
-    color:#C0BAB6;   
+#title a {
+  color: #c0bab6;
 }
 /*--------------- Nav bar----------------- */
-header nav{
-    float:right;
-    margin:10px 0 0 0;
-    padding:20px 0;
-    color: #C0BAB6;
-    background-color: #232323
+header nav {
+  margin: 10px 0 0 0;
+  padding: 20px 0;
+  color: #c0bab6;
+  background-color: #232323;
 }
-header nav ul{
-    list-style-type: none;
-    text-transform:uppercase;
-    padding:0 20px;
+header nav ul {
+  list-style-type: none;
+  text-transform: uppercase;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
 }
-header nav ul li{
-    display:inline;
-    list-style-type: none;
-    margin-right:25px;
+header nav ul li {
+  list-style-type: none;
+  margin-right: 25px;
 }
-.last{
-    margin-right:0;
-}
-nav a{
-    text-decoration:none;
-    color:#C0BAB6;
+nav a {
+  text-decoration: none;
+  color: #c0bab6;
 }
 /*==========================================Container==========================================*/
-#container{
-    width:960px;
-    margin:0 auto;
-    padding:30px 0;
-    overflow:auto;
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 30px 0;
+  overflow: auto;
 }
 /*---------------Section 1 ----------------- */
-#section1{
-    padding: 0 0 20px 0;
-    margin: 0 0 30px 0;
-    border-bottom:1px solid #DEDEDE;
+.section1 {
+  padding: 0 0 20px 0;
+  margin: 0 0 30px 0;
+  border-bottom: 1px solid #dedede;
 }
-#section1 p{
-    line-height:1.8em;
-    font-size:20px;
-    text-align:center;
-    color: #979797;
-} 
+.section1 p {
+  line-height: 1.8em;
+  font-size: 20px;
+  text-align: center;
+  color: #979797;
+}
 /*---------------Homepage ----------------- */
-#homepage{
-    width:100%;
-    line-height:1.6em;  
-    overflow:auto;  
+.homepage {
+  width: 100%;
+  line-height: 1.6em;
+  overflow: auto;
 }
 /*---------------Section 2 ----------------- */
-#homepage #section2{
-    overflow:auto;
-    margin-bottom:50px;
+.section2 {
+  overflow: auto;
+  margin-bottom: 50px;
 }
-#homepage #section2 article figure ul li{
-    float: left;
-    margin:0 20px 20px 0;
-    overflow:auto;
-
+.section2 article ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#homepage #section2 article figure ul #last{
-    margin-right:0px;
+.section2 article figure ul li {
+  margin-bottom: 20px;
 }
-#homepage #section2 article figure ul li img{
-    padding: 4px;
-    border: 1px solid #D6D6D6;
-    text-align: center;
-    vertical-align: middle;
-    width:215px;
-    height:150px;
+.section2 article figure ul li img {
+  border: 1px solid #d6d6d6;
+  width: 215px;
+  padding: 4px;
+  height: 150px;
 }
-#homepage #section2 article figcaption{
-    clear:both;
-    padding-bottom:20px;
-    width:100%;
-    font-weight: bold;
-    text-transform: uppercase;  
-    text-align:right;
-    border-bottom: 1px solid #DEDEDE;
+.section2 article figcaption {
+  padding-bottom: 20px;
+  width: 100%;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: right;
+  border-bottom: 1px solid #dedede;
 }
-#homepage #section2 article figcaption a {
-    color: #FF9900;
-    background-color: #FFFFFF;
+.section2 article figcaption a {
+  color: #ff9900;
+  background-color: #ffffff;
 }
 /*---------------Section 3 ----------------- */
-#homepage #section3{
-    overflow:auto;
-    color: #979797
+.section3 {
+  color: #979797;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-#homepage #section3 article{
-    width:225px;
-    margin-right:20px;
+.section3 article {
+  width: 225px;
+  /* margin-right:20px; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-#homepage #section3 article figure img{
-    float:left;
-    height:32px;
-    width:32px;
-} 
-#homepage #section3 article strong{
-    float:left;
-    margin:8px 0 0 10px;
-    font-size:14px;
-    font-weight:bold;
-    text-transform: uppercase;
-} 
-#homepage #section3 article p{
-    clear:both;
-    padding-top:5px;    
-} 
-#homepage #section3 .last{
-    margin-right:0px;
+.section3 article figure img {
+  height: 32px;
+  width: 32px;
+  flex-grow: 1;
 }
-#homepage #section3 .article_row1{
-    float:left;
+.section3 article strong {
+  margin: 8px 0 0 10px;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  flex-grow: 2;
 }
-#homepage #section3 .article_row2{
-    float:left;
+.section3 article p {
+  width:100%;
+  padding-top: 5px;
 }
-#homepage #section3 article .readmore{
-    text-align:right;
+.readmore {
+  width: 100%;
+  text-align: right;
 }
-#homepage #section3 article .readmore a{
-    color: #FF9900;
-    background-color: #FFFFFF;
+.readmore a {
+  color: #ff9900;
+  background-color: #ffffff;
 }
 /* ============================================= */
-.spacer{
-    clear:both;
-    height:30px;
-    width:100%;
+.spacer {
+  height: 30px;
+  width: 100%;
 }
 /* ============================================= */
 
 /* =====================Footer======================== */
-.row3{
-    background-color: #232323;
+.row3 {
+  background-color: #232323;
 }
-#main_footer{
-    clear:both;
-    width:960px;
-    margin:0 auto;
-    overflow:auto;
+footer {
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
-#main_footer p{
-    font-size:13px;
+footer p {
+  font-size: 13px;
 }
-#main_footer #left_footer{
-    float:left;
-    padding:20px 0;
+#left_footer {
+  float: left;
+  padding: 20px 0;
 }
-#main_footer #right_footer{
-    float:right;
-    padding:20px 0;
+#right_footer {
+  float: right;
+  padding: 20px 0;
+}
+
+/* ---------------------------------Media queries---------------------------- */
+/* ---------------------------------Mobile---------------------------- */
+@media only screen and (max-width: 600px) {
+  * {
+    box-sizing: border-box;
+  }
+  header {
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+  #title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  #title h1 {
+    font-size: 2em;
+  }
+  header nav {
+    width: 100%;
+    padding: 0;
+  }
+  header nav ul {
+    padding: 0;
+    flex-direction: column;
+  }
+  header nav ul li {
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid white;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .container {
+    width: 100%;
+    padding: 30px 10px;
+  }
+  .section1 {
+    width: 100%;
+  }
+  .section1 p {
+    font-size: 1em;
+  }
+  .section2 {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .section2 article ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .section2 article figure ul li {
+    margin-bottom: 20px;
+  }
+  .section2 article figcaption a {
+    color: #ff9900;
+    background-color: #ffffff;
+    font-size: 0.8em;
+  }
+  .section3 {
+    flex-direction: column;
+  }
+  .section3 article {
+    width: 100%;
+  }
+  .spacer {
+    display: none;
+  }
+
+  footer {
+    width: 100%;
+    flex-direction: column;
+    padding: 010px;
+  }
+}
+/* ---------------------------------Tablets---------------------------- */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  * {
+    box-sizing: border-box;
+  }
+  header {
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+  #title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  #title h1 {
+    font-size: 2em;
+  }
+  header nav {
+    width: 100%;
+    padding: 0 50px;
+  }
+  header nav ul {
+    padding: 0;
+    justify-content: space-between;
+  }
+  header nav ul li {
+    padding: 10px;
+  }
+
+  .container {
+    width: 100%;
+    padding: 30px 30px;
+  }
+  .section1 {
+    width: 100%;
+  }
+  .section1 p {
+    font-size: 1em;
+  }
+  .section2 {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .section2 article figure ul li {
+    width: 50%;
+    padding:0 50px;
+  }
+  .section2 article figcaption {
+    text-align:center;
+  }
+  .section3 {
+    /* flex-direction: column; */
+  }
+  .section3 article {
+    width: 50%;
+    padding:10px;
+  }
+  .spacer {
+    display: none;
+  }
+
+  footer {
+    width: 100%;
+    /* flex-direction: column; */
+    padding: 0 30px;
+  }
 }
