--- a/templates_FlexBox/T83_spaceX_style.css
+++ b/templates_FlexBox/T83_spaceX_style.css
@@ -45,14 +45,14 @@
             font-style: normal;
             font-family: Georgia, "Times New Roman", Times, serif;
         }
-
+                /* FLEXBOX----------------------------- */
         .fl_left {
-            float: left;
+            display: flex;
         }
 
         .fl_right {
-            float: right;
-        }
+            display: flex;
+            justify-content: flex-end;        }
 
         img {
             margin: 0;
@@ -69,7 +69,7 @@
         }
 
         .imgl {
-            float: left;
+            display:flex;
             margin: 0 15px 15px 0;
             clear: left;
         }
@@ -315,12 +315,13 @@
             float: left;
         }
         #container #homepage #services strong {
-            float: left;
-            margin: 8px 0 0 10px;
-            padding: 0;
+            display: flex;
+            margin: 0px 0 0 10px;
+            padding: 4px;
             font-size: 14px;
             font-weight: bold;
             text-transform: uppercase;
+            
         }
         #container #homepage #services p {
             display: block;
