--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 86/styles.css
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 86/styles.css
@@ -1,207 +1,435 @@
 /* ===============
         Global
     =============== */
-    *{
-        margin:0;
-        padding:0;
-        /* border:1px solid red; */
-    }
+* {
+  margin: 0;
+  padding: 0;
+  /* border:1px solid red; */
+}
 /*--------------------------- Elements --------------------------- */
-body{
-    color:#C0BAB6;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size:13px;
+body {
+  color: #c0bab6;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 13px;
 }
-h1{
-    font-size:36px;
-    font-weight:normal;
+h1 {
+  font-size: 36px;
+  font-weight: normal;
 }
-h2{
-    font-weight:normal;
-    font-size:13px;
+h2 {
+  font-weight: normal;
+  font-size: 13px;
 }
-a{
-    text-decoration:none;
-    outline:none;
+a {
+  text-decoration: none;
+  outline: none;
 }
-ul li{
-    list-style-type: none;
+ul li {
+  list-style-type: none;
 }
 
-.wrapper{
-    width:100%;
+.wrapper {
+  width: 100%;
 }
 /*--------------------------- Header--------------------------- */
-.row1{
-    background-color: #333333;
-    overflow:auto;
+.row1 {
+  background-color: #333333;
+  overflow: auto;
 }
-.row1 header{
-    width:960px;
-    margin:0 auto;
-    padding:20px 0;
-    overflow:hidden;
+header {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 /*--------------- Title----------------- */
-.row1 header #title{
-    float:left;
-    margin:0 0 20px 0;   
-}
-.row1 header #title a{
-    color:#C0BAB6;   
+#title a {
+  color: #c0bab6;
 }
 /*--------------- Nav bar----------------- */
-header nav{
-    float:right;
-    margin:10px 0 0 0;
-    padding:20px 0;
-    color: #C0BAB6;
-    background-color: #232323
+header nav {
+  margin: 10px 0 0 0;
+  padding: 20px 0;
+  color: #c0bab6;
+  background-color: #232323;
 }
-header nav ul{
-    list-style-type: none;
-    text-transform:uppercase;
-    padding:0 20px;
+header nav ul {
+  list-style-type: none;
+  text-transform: uppercase;
+  padding: 0 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-header nav ul li{
-    display:inline;
-    list-style-type: none;
-    margin-right:25px;
+header nav ul li {
+  margin-right: 25px;
 }
-.last{
-    margin-right:0;
-}
-nav a{
-    text-decoration:none;
-    color:#C0BAB6;
+nav a {
+  text-decoration: none;
+  color: #c0bab6;
 }
 /*==========================================Container==========================================*/
-#container{
-    width:960px;
-    padding:30px 0;
-    margin:0 auto;
-    overflow:auto;
+.container {
+  width: 960px;
+  padding: 30px 0;
+  margin: 0 auto;
+  overflow: auto;
 }
 /*==========================================section 1==========================================*/
-#section1{
-    overflow:auto;
-    width:100%;
-    margin-bottom:50px;
+.section1 {
+  overflow: auto;
+  width: 100%;
+  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-#section1 figure {
-    float:right;
+.section1 figure {
+  order: 2;
 }
-#section1 figcaption{
-    float:left;
-    width:280px;
-    height:260px;
-    color: #989898;
-    background-color: #DEDEDE;
-    line-height:1.6em;
-    padding:20px;
+.section1 figure img {
+  width: 100%;
 }
-#section1 figcaption strong{
-    font-size:42px;
-    font-style: italic;
-    font-weight:normal;
-    line-height:normal;
+.section1 figcaption {
+  order: 1;
+  width: 280px;
+  height: 260px;
+  color: #989898;
+  background-color: #dedede;
+  line-height: 1.6em;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-#section1 figcaption p{
-    margin:13px 0;
+.section1 figcaption strong {
+  font-size: 42px;
+  font-style: italic;
+  font-weight: normal;
+  line-height: normal;
 }
-#section1 figcaption .readmore a{
-    background-color: #DEDEDE;
+.section1 figcaption p {
+  margin: 13px 0;
 }
-.readmore{
-    float:right;
-    margin:0;
+.section1 figcaption .readmore a {
+  background-color: #dedede;
 }
-.readmore a{
-    color: #FF9900;
-    background-color: white;
+.readmore {
+  width: 100%;
+  text-align: right;
+  margin: 0;
+}
+.readmore a {
+  color: #ff9900;
+  background-color: white;
 }
 /*==========================================Homepage==========================================*/
-#homepage{
-    width:100%;
-    overflow:auto;
+.homepage {
+  width: 100%;
+  overflow: auto;
 }
 /*==========================================section 2==========================================*/
-#section2{ 
-    line-height:1.6em;
-    margin-bottom:50px;
-    overflow:auto;
+.section2 {
+  line-height: 1.6em;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
 }
-#section2 article{
-    width:300px;
-    float:left;
-    margin-right:30px;
-    color: #979797;
+.section2 article {
+  width: 300px;
+  color: #979797;
 }
-#section2 #article3{
-    margin-right:0px;
+.section2 #article3 {
+  margin-right: 0px;
 }
-#section2 article h2{
-    font-size:14px;
-    margin-bottom:15px;
-    font-weight:bold;
-    line-height:normal;
-
+.section2 article h2 {
+  font-size: 14px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  line-height: normal;
 }
-#section2 article img{
-    float:left;
-    padding:4px;
-    margin:0 10px 10px 0;
-    line-height:normal;
-    border: 1px solid #DEDEDE;
-
+.section2 article img {
+  height:80px;
+  width:80px;
+  float: left;
+  padding: 4px;
+  margin: 0 10px 10px 0;
+  line-height: normal;
+  border: 1px solid #dedede;
 }
 /*==========================================section 3==========================================*/
-#section3{
-    margin-bottom:50px;
+.section3 {
+  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-#section3 article{
-    float:left;
-    width:225px;    
-    margin-right:20px;
-    color: #919191;
+.section3 article {
+  width: 225px;
+  color: #919191;
 }
-#section3 #article4{  
-    margin-right:0;
+.section3 article figure img {
+  border: 1px solid #dedede;
+  padding: 4px;
+  margin-bottom: 10px;
 }
-#section3 article figure img{
-    border:1px solid #DEDEDE;
-    padding:4px;
-    margin-bottom:10px;
+.section3 article figcaption h2 {
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  line-height: normal;
 }
-#section3 article figcaption h2{
-    font-size:14px;
-    font-weight:bold;
-    font-style:normal;
-    line-height:normal;
-}
-#section3 article figcaption p{
-    margin:13px 0;
-    line-height:1.6em;
+.section3 article figcaption p {
+  margin: 13px 0;
+  line-height: 1.6em;
 }
 /*==========================================Footer==========================================*/
 /* =====================Footer======================== */
-.row3{
-    background-color: #232323;
+.row3 {
+  background-color: #232323;
 }
-#main_footer{
-    clear:both;
-    width:960px;
-    margin:0 auto;
-    overflow:auto;
+footer {
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
-#main_footer p{
-    font-size:13px;
+footer p {
+  font-size: 13px;
 }
-#main_footer #left_footer{
-    float:left;
-    padding:20px 0;
+#left_footer {
+  /* float:left; */
+  padding: 20px 0;
 }
-#main_footer #right_footer{
-    float:right;
-    padding:20px 0;
+#right_footer {
+  /* float:right; */
+  padding: 20px 0;
+}
+/* ---------------------------------Media queries---------------------------- */
+/* ---------------------------------Mobile---------------------------- */
+@media only screen and (max-width: 600px) {
+  * {
+    box-sizing: border-box;
+  }
+  header {
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+  #title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  #title h1 {
+    font-size: 2em;
+  }
+  header nav {
+    width: 100%;
+    padding: 0;
+  }
+  header nav ul {
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+  }
+  header nav ul li {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 1px solid white;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .container {
+    width: 100%;
+    padding: 30px 10px 0 10px;
+  }
+  .section1 {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .section1 figure {
+    width: 100%;
+    order:1;
+  }
+  .section1 figcaption {
+    order: 2;
+    width: 100%;
+    height:auto;
+  }
+  .section1 figcaption strong {
+    font-size: 1.8em;
+  }
+  .section1 figcaption .readmore {
+    margin:0;
+  }
+  .section2 {
+    width: 100%;
+    margin-bottom: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding:0 10px; */
+  }
+  .section2 article{
+      width:100%;
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-items: center;
+      margin-bottom:20px;
+      text-align:center;
+  }
+  .section2 article figure{
+    width:100%;
+    height:auto;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    align-items:center;
+  }
+  .section2 article img{
+      float:none;
+      margin:0;
+  }
+  .section3 {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    text-align:center;
+  }
+  .section3 article{
+      width:100%;
+  }
+  footer {
+    width: 100%;
+    flex-direction: column;
+    padding: 0 10px;
+    text-align:center;
+  }
+}
+/* ---------------------------------Tablets---------------------------- */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  * {
+    box-sizing: border-box;
+  }
+  header {
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+  #title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  #title h1 {
+    font-size: 2em;
+  }
+  header nav {
+    width: 100%;
+    padding: 10px 50px;
+  }
+  header nav ul {
+    padding: 0;
+    justify-content: space-between;
+  }
+  header nav ul li {
+    padding: 10px;
+  }
+
+  .container {
+    width: 100%;
+    padding: 30px 30px;
+  }
+  .section1 {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .section1 figure {
+    width: 100%;
+    order:1;
+  }
+  .section1 figcaption {
+    order: 2;
+    width: 100%;
+    height:auto;
+  }
+  .section1 figcaption strong {
+    font-size: 1.8em;
+  }
+  .section1 figcaption .readmore {
+    margin:0;
+  }
+  .section2 {
+    width: 100%;
+    margin-bottom: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding:0 10px; */
+  }
+  .section2 article{
+      width:100%;
+      display:flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      /* padding:0 50px; */
+      margin-bottom:20px;
+      /* text-align:center; */
+  }
+  .section2 article h2{
+    text-align:center;
+    width:100%;
+  }
+  .section2 article figure{
+    width:20%;
+    height:auto;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center ;
+    align-items:center;
+  }
+  .section2 article img{
+      float:none;
+      margin:0;
+  }
+  .section2 article p{
+    width:80%;
+  }
+  .section2 article .readmore{
+    width:100%;
+  }
+  .section3 {
+    width: 100%;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    text-align:center;
+  }
+  .section3 article{
+      width:50%;
+      padding:20px;
+  }
+  footer {
+    width: 100%;
+    padding: 0 30px;
+  }
 }
