--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 88/styles.css
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 88/styles.css
@@ -2,6 +2,7 @@
         Global
     =============== */
     *{
+        box-sizing: border-box;
         margin:0;
         padding:0;
         /* border:1px solid red; */
@@ -36,40 +37,41 @@
         background-color: #333333;
         overflow:auto;
     }
-    .row1 header{
+    header{
         width:960px;
         margin:0 auto;
         padding:20px 0;
-        overflow:hidden;
+        display:flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+        align-items: center;
     }
     /*--------------- Title----------------- */
-    .row1 header #title{
-        float:left;
-        margin:0 0 20px 0;   
+    header #title{
+        flex-grow: 1;   
     }
-    .row1 header #title a{
+    header #title a{
         color:#C0BAB6;   
     }
     /*--------------- Nav bar----------------- */
     header nav{
-        float:right;
-        margin:10px 0 0 0;
-        padding:20px 0;
+        flex-grow: 0.5;
         color: #C0BAB6;
-        background-color: #232323
+        background-color: #232323;
+
     }
     header nav ul{
         list-style-type: none;
         text-transform:uppercase;
         padding:0 20px;
+        display:flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+        align-items: center;
     }
     header nav ul li{
-        display:inline;
         list-style-type: none;
-        margin-right:25px;
-    }
-    .last{
-        margin-right:0;
+        padding:20px 0;
     }
     nav a{
         text-decoration:none;
@@ -79,30 +81,32 @@
 
 /* ============================================ Section ============================================  */
 
-#container{
+.container{
     width:960px;
     margin:0 auto;
     overflow:hidden;
     padding:30px 0;
 }
 /* ============================ Section 1 ========================== */
-#container #section1{
+#section1{
     margin-bottom:30px;
     height:360px;
+}
+#section1 img{
+    width:100%;
 }
 /*==========================================section 2==========================================*/
 #section2{
     margin-bottom:30px;
-    overflow:auto;
+    overflow: auto;
+    display:flex;
+    flex:wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 #section2 article{
-    float:left;
     width:300px;    
-    margin-right:30px;
     color: #919191;
-}
-#section2 #article3{  
-    margin-right:0;
 }
 #section2 article figure img{
     border:1px solid #DEDEDE;
@@ -134,12 +138,16 @@
 #section3{
     overflow:auto;
     width:100%;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 #section3 figure {
-    float:right;
+    order:2;
 }
 #section3 figcaption{
-    float:left;
+    order:1;
     width:460px;
     color: #989898;
     line-height:1.6em;
@@ -171,15 +179,14 @@
     padding:30px 0;
     overflow:auto;
     line-height:1.4em;
+
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+
 }
 #details section{
-    float:left;
-    margin-right:20px;
     width:225px;
-}
-#details #details-section4{
-    margin-right:0;
-    float:right;
 }
 #details section h2{
     font-size:12px;
@@ -206,19 +213,216 @@
     background-color: #232323;
 }
 #main_footer{
-    clear:both;
     width:960px;
     margin:0 auto;
-    overflow:auto;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 #main_footer p{
     font-size:13px;
-}
-#main_footer #left_footer{
-    float:left;
     padding:20px 0;
 }
-#main_footer #right_footer{
-    float:right;
-    padding:20px 0;
+
+
+/* ---------------------------------Media Queries--------------------------------------------------- */
+
+
+/* ---------------------------------Mobile--------------------------------------------------- */
+@media only screen and (max-width: 600px){
+
+    *{
+        box-sizing: border-box;
+    }
+    header{
+        width:100%;
+        flex-direction:column;
+        box-sizing: border-box;
+        padding-bottom:0;
+    }
+    #title{
+        width:100%;
+        text-align:center;
+        margin-bottom:10px;
+    }
+    header nav{
+        box-sizing: border-box;
+        width:100%;
+        padding:0;
+        margin:0;
+    }
+    header nav ul{
+        padding:0;  
+        margin:0;
+        display:block;
+    }
+    header nav ul li{
+        width:100%;
+        padding:10px 0;
+        display:flex;
+        justify-content: center;
+        border:solid 1px white;
+    }
+
+    .container{
+        width:100%;
+        padding:30px 10px;
+    }
+    #section1{
+        height:auto;
+    }
+    #section2{
+        width:100%;
+        flex-direction: column;
+        text-align:center;
+        margin-bottom:10px;
+    }
+    #section2 article{
+        margin-bottom:20px;
+    }
+    #section2 article figure img{
+        width:50%;
+        /* height:50%
+         */
+    }
+
+    #section3{
+        width:100%;
+        justify-content: center;
+    }
+    #section3 figure{
+        order:1;
+        text-align:center;
+    }
+    #section3 figure img{
+        width:75%;
+    }
+    #section3 figcaption{
+        width:100%;
+        order:2;
+    }
+
+    #section3 figcaption strong{
+        font-size:1.8em;
+        text-align: center;
+        padding-bottom:10px;
+    }
+    #section3 figcaption p{
+        margin:0 0 13px 0;
+        padding:10px;
+    }
+    #section3 figcaption .readmore{
+        padding:0;
+        margin:0;
+    }
+    #details{
+        width:100%;
+        text-align:center;
+    }
+    #details section{
+        width:100%;
+        margin-bottom:10px;
+    }
+    #main_footer{
+        width:100%;
+        flex-direction: column;
+        text-align:center;
+    }
+    #main_footer p{
+        font-size:13px;
+        padding:20px 0;
+    }
+}
+
+/* ---------------------------------Tablet--------------------------------------------------- */
+@media only screen and (min-width: 601px) and (max-width: 768px){
+
+    *{
+        box-sizing: border-box;
+    }
+    header{
+        width:100%;
+        /* flex-direction:column; */
+        box-sizing: border-box;
+        padding-bottom:0;
+    }
+    #title{
+        width:100%;
+        text-align:center;
+        margin-bottom:10px;
+    }
+    header nav{
+        width:100%;
+    }
+    .container{
+        width:100%;
+        padding:30px 30px;
+    }
+    #section1{
+        height:auto;
+    }
+    #section2{
+        width:100%;
+        flex-direction: column;
+        text-align:center;
+        margin-bottom:10px;
+    }
+    #section2 article{
+        width:100%;
+        margin-bottom:20px;
+        display:flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    #section2 article figcaption{
+        width:50%;
+        height:auto;
+        flex-grow:1;
+    }
+    #section3{
+        width:100%;
+    }
+    #section3 figure{
+        width:50%;
+        flex-grow: 1;
+    }
+    #section3 figure img{
+        width:100%;
+        height:auto;
+    }
+    #section3 figcaption{
+        width:45%;
+        height:auto;
+    }
+
+    #section3 figcaption strong{
+        font-size:2em;
+        text-align: center;
+    }
+    #section3 figcaption p{
+        margin:0 0 13px 0;
+        padding:10px;
+    }
+    #section3 figcaption .readmore{
+        margin:0;
+    }
+    #details{
+        width:100%;
+        text-align:center;
+    }
+    #details section{
+        width:25%;
+        margin-bottom:10px;
+    }
+    #main_footer{
+        width:100%;
+        /* flex-direction: column; */
+        text-align:center;
+    }
+    #main_footer p{
+        font-size:13px;
+        padding:20px 30px;
+    }
 }
