--- a/templates_FlexBox/T84_movie_poster_style.css
+++ b/templates_FlexBox/T84_movie_poster_style.css
@@ -232,22 +232,30 @@ input, textarea, select{
 #header #hgroup h2{
     font-size:13px;
 }
-/* #header form{display:block; width:290px; float:right; margin:20px 0; padding:0;} */
+#header form{display:block; width:290px; float:right; margin:20px 0; padding:0;} 
 #header form input{display:block; float:left; width:200px; margin:0; padding:5px; color:#C0BAB6; background-color:#232323; border:1px solid #666666;}
 #header form #sf_submit{display:block; float:right; width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
 
 #header form{
     display:block; 
     width:290px; 
-    display: flex;
-    justify-content: flex-end;
-
+   /* float: right; */
     margin:20px 0; 
     padding:0;
 }
+#header form {
+    border:opx;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center
+}
 #header form input{
     display:block; 
-    float:left; 
+    /* float:left;  */
+    display: flex;
+    justify-content: flex-end;
+
     width:200px; 
     margin:0; 
     padding:5px; 
@@ -275,9 +283,13 @@ input, textarea, select{
     color:#C0BAB6; 
     background-color:#232323; 
     clear:both;
+   
 }
-#header nav ul
-{padding:0 20px;
+
+#header nav ul{
+    padding:0 20px;
+
+    /* display:flex; */
 }
 #header nav li{
     display:inline; 
@@ -301,7 +313,8 @@ input, textarea, select{
     padding:30px 0;
 }
 #container section{
-    display:block; 
+    display:block;
+    
     width:100%; 
     margin:0 0 30px 0; 
     padding:0;
